--- a/package.json
+++ b/package.json
@@ -9,8 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.15",
+    "@apollo/server": "^4.7.4",
+    "@as-integrations/next": "^2.0.0",
+    "@auth0/nextjs-auth0": "^2.6.2",
+    "@prisma/client": "^4.16.1",
+    "apollo-server-micro": "^3.12.0",
+    "axios": "^1.4.0",
+    "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
+    "grommet": "^2.32.2",
+    "grommet-icons": "^4.11.0",
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.3.0",
     "next": "13.4.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-components": "^5.3.11"
+  },
+  "devDependencies": {
+    "prisma": "^4.16.1"
   }
 }
