--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@as-integrations/next": "^2.0.0",
     "@auth0/nextjs-auth0": "^2.6.2",
     "@prisma/client": "^4.16.1",
+    "@suprsend/react-inbox": "^1.3.1",
+    "@suprsend/web-sdk": "^1.2.5",
     "apollo-server-micro": "^3.12.0",
     "axios": "^1.4.0",
     "graphql": "^16.6.0",
